solve overflow sidebar and size card

--- a/src/output.css
+++ b/src/output.css
@@ -693,6 +693,14 @@ video {
   width: 100%;
 }
 
+.w-\[212px\] {
+  width: 212px;
+}
+
+.w-\[213px\] {
+  width: 213px;
+}
+
 .max-w-\[1280px\] {
   max-width: 1280px;
 }
@@ -707,6 +715,18 @@ video {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(4\2c 213px\)\] {
+  grid-template-columns: repeat(4,213px);
+}
+
+.grid-cols-\[repeat\(4\2c 293px\)\] {
+  grid-template-columns: repeat(4,293px);
+}
+
+.grid-cols-\[repeat\(3\2c 293px\)\] {
+  grid-template-columns: repeat(3,293px);
 }
 
 .place-items-center {
@@ -799,6 +819,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .rounded-\[20px\] {
   border-radius: 20px;
 }
@@ -856,6 +880,25 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#232323\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 35 35 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#\] {
+  background-color: #;
+}
+
+.bg-\[\#f8f9fb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 251 / var(--tw-bg-opacity));
+}
+
+.bg-purple-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
 }
 
 .object-cover {
